implement ross cox's float point printing and parsing algorithms